--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,19 +24,22 @@
 
     <string name="OPEN_WEATHER_MAP_API_KEY">c67cd960e23d3e951b6e0850175a11ba</string>
 
-    <!-- Label for the temperature unit preference -->
-    <string name="pref_temperature_unit_label">Pick Your Units</string>
+    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
+    <string name="pref_units_label">Temperature Units</string>
 
-    <!-- Label for imperial unit preference -->
-    <string name="pref_imperial_unit_label">IMPERIAL</string>
+    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
+    <string name="pref_units_label_metric">Metric</string>
 
-    <!-- Key name for storing imperial temperature units in SharedPreferences -->
-    <string name="pref_imperial_unit_key" translatable="true">imperial units</string>
+    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
+    <string name="pref_units_label_imperial">Imperial</string>
 
-    <!-- Label for metric unit preference -->
-    <string name="pref_metric_unit_label">METRIC</string>
+    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
+    <string name="pref_units_key" translatable="false">units</string>
 
-    <!-- Key name for storing metric temperature units in SharedPreferences -->
-    <string name="pref_metric_unit_key" translatable="true">metric units</string>
+    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
+    <string name="pref_units_metric" translatable="false">metric</string>
+
+    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
+    <string name="pref_units_imperial" translatable="false">imperial</string>
 
 </resources>
